feat: added basic responsivity, chapters sorting, few design fixes

--- a/src/components/Chapter.astro
+++ b/src/components/Chapter.astro
@@ -17,5 +17,5 @@ const { index, title, description } = Astro.props
   <Ico>{index}</Ico>
   <strong class="font-medium">{title}</strong>
   <div/>
-  <Text>{description}</Text>
+  <Text class="text-left">{description}</Text>
 </div>
