--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ import Content from '../components/Content.astro'
       href='https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap'
       rel='stylesheet'
     />
-    <title>Web title</title>
+    <title>Úsměv pro Adama</title>
   </head>
   <body>
     <div class="layout">
