feat: added new sections

--- a/src/components/Chapter.astro
+++ b/src/components/Chapter.astro
@@ -15,7 +15,7 @@ const { index, title, description } = Astro.props
 
 <div class="chapter-item">
   <Ico>{index}</Ico>
-  <strong class="font-medium">{title}</strong>
+  <strong class="font-medium self-center">{title}</strong>
   <div/>
   <Text class="text-left">{description}</Text>
 </div>
