--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,8 +24,8 @@ import Content from '../components/Content.astro'
       <footer class="text-center">
         <Content bg="dark">
           <strong class="inline-block text-lg mb-2">Úsměv pro Adama</strong>
-          <p class="text-tertiary">Příběh naděje, síly a pomoci. Kniha zdarma díky podpoře nadace EPCG.</p>
-          <p class="text-sm mt-4 text-[#E8BE94]">© {new Date().getFullYear()} Úsměv pro Adama. Všechna práva vyhrazena.</p>
+          <p class="text-tertiary pb-6 border-b border-[#A25D32]">Příběh naděje, síly a pomoci. Kniha zdarma díky podpoře nadace EPCG.</p>
+          <p class="text-sm pt-6 text-[#E8BE94]">© {new Date().getFullYear()} Úsměv pro Adama. Všechna práva vyhrazena.</p>
         </Content>
       </footer>
     </div>
