--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -19,7 +19,7 @@ const bgMap: Record<BgType, string> = {
 ---
 
 <section class={cn(bgMap[bgValue])}>
-  <div class="container mx-auto py-12 px-8">
+  <div class="container mx-auto py-12 px-8 md:px-64">
     <slot />
   </div>
 </section>
