--- a/src/components/Ico.astro
+++ b/src/components/Ico.astro
@@ -1,5 +1,13 @@
 ---
 
+import { cn } from '../utils/cn'
+
+interface Props {
+  class?: string
+}
+
+const { class: customClass } = Astro.props as Props
+
 ---
 
-<div class="w-[32px] h-[32px] bg-ico text-dark rounded-full flex justify-center items-center"><slot /></div>
+<div class={cn("w-[32px] h-[32px] bg-ico text-dark rounded-full flex justify-center items-center",customClass)}><slot /></div>
