--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,6 +44,10 @@
     display: grid;
     grid-template-columns: auto 1fr;
     column-gap: 20px;
+    @media only screen and (max-width: 600px) {
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
 }
 
 /*    ------------------------------------- */
