feat: added main text labels

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,15 +49,11 @@ const steps = await getCollection('steps')
       <div class='grid grid-cols-1 md:grid-cols-2 items-center gap-8'>
         <div>
           <Text class='text-left'>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.
+            Jsem matka, která po ztrátě partnera a těžké nemoci svého syna Adama prochází cestou, která mi ukázala sílu v sobě i v lidech kolem mě. Tato kniha není jen příběhem, ale i nástrojem, jak se vyrovnat s tragédiemi a najít nové smysly života. Příběh Adama je příběhem nejen jeho, ale i všech dětí a rodičů, kteří se nevzdávají a i přes životní tragédie dělají své maximum.
           </Text>
           <H3 class='text-left'>Proč tato kniha vznikla?</H3>
           <Text class='text-left'>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.
+            Chceme, aby nikdo nemusel procházet těžkým obdobím po ztrátě blízkého s pocitem, že je v tom sám. Sdílením našeho příběhu nabízíme oporu, naději a praktické rady všem, kdo čelí ztrátě, nemoci či životní změně.
           </Text>
         </div>
         <img src='/img/about.png' class='m-auto rounded-full w-full h-full md:w-[240px] md:h-[240px]' alt='' />
